force-app/main/default/objects/Lead/fields/Asunto_Formulario_Web__c.field-meta.xml
<CustomField>
    <fullName>Asunto_Formulario_Web__c</fullName>
    <description>Titulo del formulario procedente desde Web</description>
    <label>Asunto Formulario Web</label>
    <length>128</length>
    <type>Text</type>
</CustomField>