force-app/main/default/objects/Lead/fields/CandidatoWebEliminar__c.field-meta.xml
<CustomField>
    <fullName>CandidatoWebEliminar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si es un canidato Web y ya existe un contacto con ese email o nombre+apellido+email se marca este candidato que se inserta para su eliminación</description>
    <label>Candidato Web Eliminar</label>
    <type>Checkbox</type>
</CustomField>