force-app/main/default/objects/Lead/fields/Como_nos_ha_conocido__c.field-meta.xml
<CustomField>
    <fullName>Como_nos_ha_conocido__c</fullName>
    <label>¿Cómo nos ha conocido?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CanalOrigenCliente</valueSetName>
    </valueSet>
</CustomField>