force-app/main/default/objects/Lead/fields/Como_quieres_ser_atendido__c.field-meta.xml
<CustomField>
    <fullName>Como_quieres_ser_atendido__c</fullName>
    <description>Pregunta realizada al candidato para saber el canal por el que quiere ser atendido,</description>
    <label>¿Cómo quieres ser atendido?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Canal_Comunicacion_Candidato_y_Cliente</valueSetName>
    </valueSet>
</CustomField>