force-app/main/default/objects/Lead/fields/ConvertidoDesdeComunidad__c.field-meta.xml
<CustomField>
    <fullName>ConvertidoDesdeComunidad__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que indica si el candidato se ha convertido a través de la comunidad. esto sucede desde la página de registro de la comunidad.</description>
    <label>Convertido desde comunidad</label>
    <type>Checkbox</type>
</CustomField>