force-app/main/default/objects/Lead/fields/CorreoElectronicoSecundario__c.field-meta.xml
<CustomField>
    <fullName>CorreoElectronicoSecundario__c</fullName>
    <description>Correo electrónico secundario</description>
    <label>Correo electrónico (secundario)</label>
    <type>Email</type>
</CustomField>