force-app/main/default/objects/Lead/fields/Deseo_recibir_Mensajes_de_Whatsapp__c.field-meta.xml
<CustomField>
    <fullName>Deseo_recibir_Mensajes_de_Whatsapp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Presto mi consentimiento libre, informado, específico e inequívoco y autorizo a ARRIAGA ASOCIADOS ASESORAMIENTO JURÍDICO Y ECONÓMICO, S.L. a ponerse en contacto conmigo a través del servicio de mensajería instantánea WhatsApp Messenger, cuya política de privacidad está disponible en su página web</description>
    <inlineHelpText>Presto mi consentimiento libre, informado, específico e inequívoco y autorizo a ARRIAGA ASOCIADOS ASESORAMIENTO JURÍDICO Y ECONÓMICO, S.L. a ponerse en contacto conmigo a través del servicio de mensajería instantánea WhatsApp Messenger, cuya política de privacidad está disponible en su página web</inlineHelpText>
    <label>Deseo recibir Mensajes de Whatsapp</label>
    <type>Checkbox</type>
</CustomField>