force-app/main/default/objects/Lead/fields/DocumentoIdentidad__c.field-meta.xml
<CustomField>
    <fullName>DocumentoIdentidad__c</fullName>
    <description>Documento de identidad del candidato, admite NIF, CIF o Pasaporte. Utilizado junto con el campo TipoDocumento__c para validara el formato</description>
    <label>Documento de Identidad</label>
    <length>50</length>
    <type>Text</type>
</CustomField>