force-app/main/default/objects/Lead/fields/idCampanaWeb__c.field-meta.xml
<CustomField>
    <fullName>idCampanaWeb__c</fullName>
    <description>Los candidatos que vienen por web2Lead deben de completar este dato para que se asocie, en caso de existir ya el candidato como contacto, la oportunidad que se crea con la campaña indicada en el formulario</description>
    <label>id Campaña Web</label>
    <length>18</length>
    <type>Text</type>
</CustomField>