force-app/main/default/objects/Lead/fields/lcs_gdpr__HasOptedOutGeoTracking__c.field-meta.xml
<CustomField>
    <fullName>lcs_gdpr__HasOptedOutGeoTracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bloquear seguimiento de geoubicación</label>
    <type>Checkbox</type>
</CustomField>