force-app/main/default/objects/Lead/fields/lcs_gdpr__HasOptedOutOfPostalMail__c.field-meta.xml
<CustomField>
    <fullName>lcs_gdpr__HasOptedOutOfPostalMail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si la persona desea que se comercialice con él/ella por correo postal.</description>
    <label>No recibir correo postal</label>
    <type>Checkbox</type>
</CustomField>