force-app/main/default/objects/Lead/fields/lcs_gdpr__HasOptedOutProcessing__c.field-meta.xml
<CustomField>
    <fullName>lcs_gdpr__HasOptedOutProcessing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si quiere que se procese.</description>
    <label>No procesar</label>
    <type>Checkbox</type>
</CustomField>