force-app/main/default/objects/Lead/fields/lcs_gdpr__HasOptedOutSolicit__c.field-meta.xml
<CustomField>
    <fullName>lcs_gdpr__HasOptedOutSolicit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si la persona quiere que se comercialice.</description>
    <label>No comercializar</label>
    <type>Checkbox</type>
</CustomField>