force-app/main/default/objects/Lead/fields/lcs_gdpr__HasOptedOutTracking__c.field-meta.xml
<CustomField>
    <fullName>lcs_gdpr__HasOptedOutTracking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si quiere que se le realice seguimiento.</description>
    <label>No realizar seguimiento</label>
    <type>Checkbox</type>
</CustomField>