force-app/main/default/objects/Lead/fields/lcs_gdpr__SendIndividualData__c.field-meta.xml
<CustomField>
    <fullName>lcs_gdpr__SendIndividualData__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exportar datos de persona</label>
    <type>Checkbox</type>
</CustomField>