force-app/main/default/objects/Lead/fields/lcs_gdpr__ShouldForget__c.field-meta.xml
<CustomField>
    <fullName>lcs_gdpr__ShouldForget__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si la persona quiere que se le olvide.</description>
    <label>Olvidar a esta persona</label>
    <type>Checkbox</type>
</CustomField>