force-app/main/default/objects/Lead/fields/NombreApellidoEmail__c.field-meta.xml
<CustomField>
    <fullName>NombreApellidoEmail__c</fullName>
    <description>Se une estos campos para buscar duplicados con los datos procedentes de formularios web</description>
    <formula>UPPER( TRIM( FirstName ) &amp;  TRIM( LastName ) &amp;  TRIM( Email ))</formula>
    <label>Nombre Apellido Email</label>
    <type>Text</type>
</CustomField>