force-app/main/default/objects/Lead/fields/Oculto__c.field-meta.xml
<CustomField>
    <fullName>Oculto__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marcar este check hace que el registro del candidato deje de estar visible para usuarios no administradores</description>
    <inlineHelpText>Marcar este check hace que el registro del candidato deje de estar visible para usuarios no administradores</inlineHelpText>
    <label>¿Confirma que desea ocultar el registro?</label>
    <type>Checkbox</type>
</CustomField>