force-app/main/default/objects/Lead/fields/OM_SubOrigin__c.field-meta.xml
<CustomField>
    <fullName>OM_SubOrigin__c</fullName>
    <label>SubOrigin</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OM_PhoneOrigin</valueSetName>
    </valueSet>
</CustomField>