force-app/main/default/objects/Lead/fields/Origen_Formulario_Web__c.field-meta.xml
<CustomField>
    <fullName>Origen_Formulario_Web__c</fullName>
    <label>Origen Formulario Web</label>
    <length>255</length>
    <type>Text</type>
</CustomField>