force-app/main/default/objects/Lead/fields/Potencial_de_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Potencial_de_Conversion__c</fullName>
    <description>Potencial que tiene el candidato para convertirse en Cliente</description>
    <label>Potencial de Conversión</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PotencialConvesion</valueSetName>
    </valueSet>
</CustomField>