force-app/main/default/objects/Lead/fields/ProductoFormularioWeb__c.field-meta.xml
<CustomField>
    <fullName>ProductoFormularioWeb__c</fullName>
    <description>Id del producto en el que muestra interés el candidato a través de un formulario web</description>
    <label>Producto Formulario Web</label>
    <length>255</length>
    <type>Text</type>
</CustomField>