force-app/main/default/objects/Lead/fields/Resultado_Tipo_Formulario_Web__c.field-meta.xml
<CustomField>
    <fullName>Resultado_Tipo_Formulario_Web__c</fullName>
    <description>Resultado Tipo Formulario Web, hacer el seguimiento de los candidatos recibidos a través de formulario web</description>
    <inlineHelpText>Resultado seguimiento de los candidatos</inlineHelpText>
    <label>Resultado Tipo Formulario Web</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_Formulario_Web__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CITA PRESENCIAL</fullName>
                <label>Cita Presencial</label>
            </value>
            <value>
                <fullName>CITA TELEFÓNICA</fullName>
                <label>Cita Telefónica</label>
            </value>
            <value>
                <fullName>CITA VIDEOCONFERENCIA</fullName>
                <label>Cita Videoconferencia</label>
            </value>
            <value>
                <fullName>DESCARTADO / NO INTERESA</fullName>
                <label>Descartado / no Interesa</label>
            </value>
            <value>
                <fullName>INDECISO / NO TIENE DOCUMENTACIÓN</fullName>
                <label>Indeciso / No Tiene Documentación</label>
            </value>
            <value>
                <fullName>Llamadas restringidas</fullName>
            </value>
            <value>
                <fullName>Mail informativo costes</fullName>
            </value>
            <value>
                <fullName>Máximo Nº de Llamadas</fullName>
            </value>
            <value>
                <fullName>NO CONTESTA</fullName>
                <label>No Contesta</label>
            </value>
            <value>
                <fullName>NO HAY OFICINA ABIERTA</fullName>
                <label>No hay Oficina Abierta</label>
            </value>
            <value>
                <fullName>No localizado candidato Recaptura</fullName>
                <label>No Localizado Candidato Recaptura</label>
            </value>
            <value>
                <fullName>No localizado cita online</fullName>
                <isActive>false</isActive>
                <label>No localizado cita online</label>
            </value>
            <value>
                <fullName>NO LOCALIZADO EMAIL INFORMACIÓN EXPEDIENTE</fullName>
                <label>No Localizado Email Información Expediente</label>
            </value>
            <value>
                <fullName>NO LOCALIZADO EMAIL NO CONTRATABLE</fullName>
                <label>No Localizado Email no Contratable</label>
            </value>
            <value>
                <fullName>NO LOCALIZADO EMAIL SOLICITUD INFORMACIÓN</fullName>
                <label>No Localizado Email Solicitud Información</label>
            </value>
            <value>
                <fullName>NO LOCALIZADO EMAIL SOLO ASESORAMIENTO</fullName>
                <label>No Localizado Email Solo Asesoramiento</label>
            </value>
            <value>
                <fullName>NO LOCALIZADO SOLICITA CITA PRESENCIAL</fullName>
                <isActive>false</isActive>
                <label>No Localizado Solicita Cita Presencial</label>
            </value>
            <value>
                <fullName>NO LOCALIZADO SOLICITA CITA VIDEOCONFERENCIA</fullName>
                <isActive>false</isActive>
                <label>No Localizado Solicita Cita Videoconferencia</label>
            </value>
            <value>
                <fullName>Revolving_sin_documentacion</fullName>
                <label>Revolving sin documentación</label>
            </value>
            <value>
                <fullName>Teléfono no existe / Incorrecto</fullName>
            </value>
            <value>
                <fullName>TRANSFERIDO O CASO ATC</fullName>
                <label>Transferido o Caso ATC</label>
            </value>
            <value>
                <fullName>VOLVER A LLAMAR EN FECHA CONCRETA</fullName>
                <label>Volver a Llamar en Fecha Concreta</label>
            </value>
            <value>
                <fullName>YA GESTIONADO</fullName>
                <isActive>false</isActive>
                <label>YA GESTIONADO</label>
            </value>
            <value>
                <fullName>Ya gestionado / Duplicado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>