force-app/main/default/objects/Lead/fields/Sexo__c.field-meta.xml
<CustomField>
    <fullName>Sexo__c</fullName>
    <description>Género del candidato</description>
    <inlineHelpText>Género del candidato</inlineHelpText>
    <label>Género</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sexo</valueSetName>
    </valueSet>
</CustomField>