force-app/main/default/objects/Lead/fields/Tipo_Formulario_Web__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Formulario_Web__c</fullName>
    <description>Tipo Formulario Web, hacer el seguimiento de los candidatos recibidos a través de formulario web.</description>
    <inlineHelpText>Seguimiento de los candidatos recibidos a través de formulario web</inlineHelpText>
    <label>Tipo Formulario Web</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CON PRODUCTO CONCRETO</fullName>
                <label>Con Producto Concreto</label>
            </value>
            <value>
                <fullName>PRODUCTO NO CONTRATABLE</fullName>
                <label>Producto no Contratable</label>
            </value>
            <value>
                <fullName>SIN PRODUCTO CONCRETO</fullName>
                <label>Sin Producto Concreto</label>
            </value>
            <value>
                <fullName>ASESORAMIENTO GRATUITO</fullName>
                <label>Asesoramiento Gratuito</label>
            </value>
            <value>
                <fullName>YA CLIENTE</fullName>
                <label>Ya Cliente</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>