force-app/main/default/objects/Lead/fields/URL_Formulario_Web__c.field-meta.xml
<CustomField>
    <fullName>URL_Formulario_Web__c</fullName>
    <label>URL Formulario Web</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>