force-app/main/default/objects/Lead/recordTypes/Estandar.recordType-meta.xml
<RecordType>
    <fullName>Estandar</fullName>
    <active>true</active>
    <businessProcess>Estándar</businessProcess>
    <description>Record type para los candidatos habituales de Arriaga Asociados</description>
    <label>Estándar</label>
</RecordType>