force-app/main/default/objects/Lead/recordTypes/Oculto.recordType-meta.xml
<RecordType>
    <fullName>Oculto</fullName>
    <active>true</active>
    <businessProcess>Estándar</businessProcess>
    <description>Tipo de registro para ocultar/bloquear registros a usuarios no admin</description>
    <label>Oculto</label>
</RecordType>