force-app/main/default/objects/Lead/validationRules/Control_Documento_Identificativo_Led_OLD.validationRule-meta.xml
<ValidationRule>
    <fullName>Control_Documento_Identificativo_Led_OLD</fullName>
    <active>false</active>
    <errorConditionFormula>And (
Not(ISPICKVAL(TipoDocumento__c,&quot;&quot;)),
OR (
AND(
NOT(ISPICKVAL(TipoDocumento__c,&quot;CIF&quot;)), OR (ISNUMBER(RIGHT(DocumentoIdentidad__c,1)), DocumentoIdentidad__c=&quot;&quot;)
),
AND(
ISPICKVAL(TipoDocumento__c,&quot;CIF&quot;), OR(ISNUMBER(LEFT(DocumentoIdentidad__c,1)), DocumentoIdentidad__c=&quot;&quot;)
)
)
)</errorConditionFormula>
    <errorMessage>Si rellena el campo Tipo de Documento, ha de rellenar también el Documento. Verifique el Tipo y/o el Documento</errorMessage>
</ValidationRule>