force-app/main/default/objects/Lead/validationRules/Control_Nombre_Empresa.validationRule-meta.xml
<ValidationRule>
    <fullName>Control_Nombre_Empresa</fullName>
    <active>true</active>
    <description>Controla el tamaño de Compañía por el paso a SAGE</description>
    <errorConditionFormula>AND(
 NOT ISBLANK( Company ) ,
 LEN( Company ) &gt; 40
)</errorConditionFormula>
    <errorMessage>Revise el campo Compañía, no puede ser mayor de 40 caracteres</errorMessage>
</ValidationRule>