force-app/main/default/objects/Lead/validationRules/EmailOTelefono.validationRule-meta.xml
<ValidationRule>
    <fullName>EmailOTelefono</fullName>
    <active>true</active>
    <description>Se debe informar el email o el télefono</description>
    <errorConditionFormula>AND ( 
  ISBLANK (Email),
  ISBLANK (Phone)
)</errorConditionFormula>
    <errorMessage>El correo electrónico o el teléfono principal deben estar rellenos</errorMessage>
</ValidationRule>