force-app/main/default/objects/Lead/validationRules/Nombre_obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Nombre_obligatorio</fullName>
    <active>true</active>
    <description>Nombre del candidato obligatorio</description>
    <errorConditionFormula>ISBLANK( FirstName )</errorConditionFormula>
    <errorMessage>El nombre es obligatorio</errorMessage>
</ValidationRule>