force-app/main/default/objects/Lead/listViews/Candidatos_Facebook.listView-meta.xml
<ListView>
    <fullName>Candidatos_Facebook</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>Como_quieres_ser_atendido__c</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>AceptoPoliticaPrivacidad__c</columns>
    <columns>DeseoRecibirComunicacionesComerciales__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Facebook</value>
    </filters>
    <label>Candidatos Facebook</label>
</ListView>