force-app/main/default/objects/Lead/listViews/COMERCIAL_Clientes_Revisi_n_Hipoteca_Lead.listView-meta.xml
<ListView>
    <fullName>COMERCIAL_Clientes_Revisi_n_Hipoteca_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>COMERCIAL-Clientes Revisión Hipoteca</label>
    <queue>COMERCIAL_Clientes_Revisi_n_Hipoteca</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>