force-app/main/default/objects/Lead/listViews/COMERCIAL_Mailing_Comisi_n_Apertura_2023_Lead.listView-meta.xml
<ListView>
    <fullName>COMERCIAL_Mailing_Comisi_n_Apertura_2023_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>COMERCIAL-Mailing Comisión Apertura 2023</label>
    <queue>COMERCIAL_Mailing_Comisi_n_Apertura_2023</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>