force-app/main/default/objects/Lead/listViews/Online_Candidatos_Recaptura.listView-meta.xml
<ListView>
    <fullName>Online_Candidatos_Recaptura</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Recaptura</value>
    </filters>
    <label>Online Candidatos Recaptura</label>
    <queue>Online</queue>
</ListView>