force-app/main/default/objects/Lead/listViews/Prueba_de_Online.listView-meta.xml
<ListView>
    <fullName>Prueba_de_Online</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>lessOrEqual</operation>
        <value>8/31/2020 8:20 AM</value>
    </filters>
    <label>Prueba Online 31/08</label>
    <queue>Online</queue>
    <sharedTo>
        <role>Admin</role>
        <role>Administrativo_Online</role>
    </sharedTo>
</ListView>